kubernetes/server-service.yml
apiVersion: v1
kind: Service
metadata:
  name: server-service
  labels:
    app: server
spec:
  selector:
    app: server
  ports:
    - protocol: TCP
      port: 5500
      targetPort: 5500
  type: NodePort
